# identifier

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: identifier.rs  lib.rs
derive/src/internals/: attr.rs  mod.rs  symbol.rs
src/: error.rs  identifier.rs  lib.rs
tests/: compile.rs
tests/compile/fail/: invalid-item.rs  invalid-item.stderr  invalid-struct-fields.rs  invalid-struct-fields.stderr  invalid-struct-primitive.rs  invalid-struct-primitive.stderr  missing-attr-with.rs  missing-attr-with.stderr
tests/compile/pass/: params.rs  simple.rs  u32.rs  u64.rs
