[package]
authors = ["Mathieu Tricoire <mathieu@tricoi.re>"]
categories = ["data-structures"]
description = "Generate 128 bits id structs easily"
documentation = "https://docs.rs/identifier/"
edition = "2018"
homepage = "https://github.com/MathieuTricoire/identifier"
keywords = ["id", "uuid"]
license = "MIT OR Apache-2.0"
name = "identifier"
readme = "README.md"
repository = "https://github.com/MathieuTricoire/identifier"
version = "0.1.3"

[workspace]
members = ["derive"]

[dependencies]
identifier_derive = { version = "0.1.1", path = "derive" }
thiserror = "1.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
